Prevent horizontal overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,18 @@
   background-color: #fcfbf9;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
 body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 /* Custom range input styling */
